kubernetes/apps/media/radarr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.darkfellanetwork.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: radarr-ingress-policy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: nginx-internal
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "80"
